fix for menu height too tall

--- a/_sass/customize_theme.scss
+++ b/_sass/customize_theme.scss
@@ -294,8 +294,8 @@ ul.navbar-nav > li {
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        padding-top: 15px;
-        padding-bottom: 15px;
+        padding-top: 8px; /* 15px */
+        padding-bottom: 8px; /* 15px */
         text-transform: none;
     }
 
